--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,35 @@ jobs:
         run: |
           sudo pip install pipenv
           make build cover
+          mv htmlcov docs
+      - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
+        with:
+          add: 'docs'
+          author_name: CI
+          author_email: ci@ci.com
+          branch: coverage
+          # The local path to the directory where your repository is located. You should use actions/checkout first to set it up
+          # Default: '.'
+          # cwd: './path/to/the/repo'
+          message: 'publish code coverage report github action'
+          # The flag used on the pull strategy. Use NO-PULL to avoid the action pulling at all.
+          # Default: '--no-rebase'
+          # pull_strategy: 'NO-PULL or --no-rebase or --no-ff or --rebase'
+
+          # Whether to push the commit and, if any, its tags to the repo. It can also be used to set the git push arguments (see the paragraph below for more info)
+          # Default: true
+          # push: false
+
+          # The arguments for the `git rm` command (see the paragraph below for more info)
+          # Default: ''
+          # remove: './dir/old_file.js'
+
+          # Whether to use the --signoff option on `git commit` (only `true` and `false` are accepted)
+          # Default: false
+          # signoff: true
+
+          # Arguments for the git tag command (the tag name always needs to be the first word not preceded by an hyphen)
+          # Default: ''
+          # tag: 'v1.0.0 --force'
+      
+          
