--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,13 @@ jobs:
         run: |
           sudo pip install pipenv
           make build badge
-          git add badge.svg
-          git config --global user.email "ci@ci.com"
-          git config --global user.name "CI"
-          git commit -m 'updated code coverage badge'
-          git push origin HEAD
+      - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
+        with:
+          add: 'badge.svg'
+          author_name: CI
+          author_email: ci@ci.com
+          branch: main
+          message: 'updated code coverage badge'
       - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
           add: 'docs'
